# currently_playing_spotify

./: Cargo.toml  Dockerfile  README.md  index.js
.github/workflows/: audit.yml  check.yml  clippy.yml  fmt.yml  release.yml  rust.yml
src/: auth.rs  config.rs  connection.rs  error.rs  main.rs  opts.rs  routes.rs  song.rs  utils.rs
