[package]
name = "currently_playing_spotify"
version = "0.1.5"
edition = "2021"

[dependencies]
axum = { version = "0.5.15", features = ["ws", "headers"] }
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.20", features = ["derive", "env"] }
http = "0.2.8"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tokio = { version = "1.21.0", default-features = false, features = ["io-util", "macros", "rt", "rt-multi-thread", "sync"] }
tower-http = { version = "0.3.4", features = ["cors"] }

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = "debuginfo"
